Addeed function and use carefully

--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Header part Accordion -->
     <header class="w-75 mb-5 mx-auto bg-warning">
         <section class="mt-5 bg-warning">
             <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -33,6 +34,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- New question -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                         <button class="accordion-button collapsed text-info fs-2 text" type="button"
@@ -52,6 +54,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- New question -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                         <button class="accordion-button collapsed text-info fs-2 text" type="button"
@@ -73,6 +76,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- New question -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                         <button class="accordion-button collapsed text-info fs-2 text" type="button"
