--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header class="w-9/12 mt-5 mx-auto">
+        <!-- Header part start -->
         <div class="navbar bg-red-100 px-8 rounded">
             <div class="flex-1">
                 <h1 class="text-4xl">Interactive <br>
@@ -28,15 +29,18 @@
                     </label>
                 </div>
             </div>
+            <!-- Header part end -->
     </header>
 
     <main>
+        <!-- Body cart -->
         <section class="flex flex-col md:flex-row lg:px-12 mt-10">
             <div class="w-[75%] lg:px-12 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div class="card w-full bg-base-100 shadow-xl">
+                <div id="background-change" class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="images/triangle.png" alt="Shoes" class="rounded-xl" />
                     </figure>
+                    <!-- card body-1 -->
                     <div class="card-body items-center text-center">
                         <h2 id="first-name" class="card-title">Triangle</h2>
                         <p>Area (A) =0.5 * b * h</p>
@@ -50,6 +54,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- card body-2 -->
                 <div class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="images/rectangle.png" alt="Shoes" class="rounded-xl" />
@@ -67,6 +72,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- card body-3 -->
                 <div class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="images/parallelogram.png" alt="Shoes" class="rounded-xl" />
@@ -74,17 +80,13 @@
                     <div class="card-body items-center text-center">
                         <h2 id="third-name" class="card-title">Parallelogram</h2>
                         <p>Area (A) = b * h</p>
-                        <p> b=10cm, h=12cm</p>
-                        <div class="flex">
-                            <input id="para-input-one" class="w-10 bg-accent text-base-200 mx-5 rounded" type="text">
-                            cm
-                            <input id="para-input-two" class="w-10 bg-accent text-base-200 mx-5 rounded" type="text">cm
-                        </div>
+                        <p> b=<span id="para-input-one">10</span> cm, h=<span id="para-input-two">12</span>cm</p>
                         <div class="card-actions">
                             <button id="third-btn" class="btn btn-primary px-20">Calculate</button>
                         </div>
                     </div>
                 </div>
+                <!-- card body-4 -->
                 <div class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="images/rhombus.png" alt="Shoes" class="rounded-xl" />
@@ -93,18 +95,14 @@
                         <h2 id="fourth-name" class="card-title">Rhombus</h2>
                         <p>Area (A) =0.5* d1* d2</p>
 
-                        <p>d1 = 16cm d2</p>
-                        <div class="flex">
-                            <input id="rhombus-input-one" class="w-10 bg-accent text-base-200 mx-5 rounded" type="text">
-                            cm
-                            <input id="rhombus-input-two" class="w-10 bg-accent text-base-200 mx-5 rounded"
-                                type="text">cm
-                        </div>
+                        <p>d1 =<span id="rhombus-input-one">16</span>cm , d2 =<span id="rhombus-input-two">8</span>cm
+                        </p>
                         <div class="card-actions">
                             <button id="fourth-btn" class="btn btn-primary px-20">Calculate</button>
                         </div>
                     </div>
                 </div>
+                <!-- card body-5 -->
                 <div class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="images/pentagon.png" alt="Shoes" class="rounded-xl" />
@@ -112,17 +110,13 @@
                     <div class="card-body items-center text-center">
                         <h2 id="fifth-name" class="card-title">Pentagon</h2>
                         <p>Area (A) =0.5 * p *b</p>
-                        <p>p = 6cm, b = 10cm</p>
-                        <div class="flex">
-                            <input id="pen-input-one" class="w-10 bg-accent text-base-200 mx-5 rounded" type="text">
-                            cm
-                            <input id="pen-input-two" class="w-10 bg-accent text-base-200 mx-5 rounded" type="text">cm
-                        </div>
+                        <p>p = <span id="pen-input-one">6</span>cm, b = <span id="pen-input-two">10</span>cm</p>
                         <div class="card-actions">
                             <button id="fifth-btn" class="btn btn-primary px-20">Calculate</button>
                         </div>
                     </div>
                 </div>
+                <!-- card body-6 -->
                 <div class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="images/ellipse.png" alt="Shoes" class="rounded-xl" />
@@ -130,13 +124,7 @@
                     <div class="card-body items-center text-center">
                         <h2 id="six-name" class="card-title">Ellipse</h2>
                         <p>Area (A) =π ab</p>
-                        <p>a = 10cm, b = 4cm</p>
-                        <div class="flex">
-                            <input id="ellipse-input-one" class="w-10 bg-accent text-base-200 mx-5 rounded" type="text">
-                            cm
-                            <input id="ellipse-input-two" class="w-10 bg-accent text-base-200 mx-5 rounded"
-                                type="text">cm
-                        </div>
+                        <p>a = <span id="ellipse-input-one">10</span>cm, b =<span id="ellipse-input-two"> 4</span>cm</p>
                         <div class="card-actions">
                             <button id="six-btn" class="btn btn-primary px-20">Calculate</button>
                         </div>
@@ -160,7 +148,7 @@
         </section>
     </main>
 
-    <script src="js/index.js"></script>
+    <script src="js/calculation.js"></script>
 </body>
 
 </html>
