--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Geometry genius</title>
+    <link rel="shortcut icon" href="images/rhombus.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -35,8 +36,8 @@
     <main>
         <!-- Body cart -->
         <section class="flex flex-col md:flex-row lg:px-12 mt-10">
-            <div class="w-[75%] lg:px-12 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div id="background-change" class="card w-full bg-base-100 shadow-xl">
+            <div class="w-[70%] lg:px-12 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="images/triangle.png" alt="Shoes" class="rounded-xl" />
                     </figure>
@@ -131,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-[25%] mx-auto">
+            <div class="w-[30%] mx-auto">
                 <div class="overflow-x-auto">
                     <table class="table w-full">
                         <!-- head -->
@@ -148,7 +149,10 @@
         </section>
     </main>
 
+
+    <!-- Script js  -->
     <script src="js/calculation.js"></script>
+    <script src="js/backgrounColor.js"></script>
 </body>
 
 </html>
