Some blog question answer change and last commit

--- a/blog.html
+++ b/blog.html
@@ -67,13 +67,7 @@
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                         aria-labelledby="panelsStayOpen-headingThree">
                         <div class="accordion-body  bg-danger text-light">
-                            Event bubbling directs an event to its target. It works like this:
-
-                            When an element (like a button) is clicked, an event is directed to the element.
-                            If an event handler is set for the element, the event handler is triggered.
-                            Then the event "bubbles up" to the elements parent.
-                            If an event handler is set for the parent, this event handler is triggered.
-                            The event continues to bubble, until it reaches the top.
+                            Event bubbling directs an event to its target. It works like this: When an element (button) is clicked, an event is directed to the element. 
                         </div>
                     </div>
                 </div>
@@ -89,7 +83,7 @@
                     <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
                         aria-labelledby="panelsStayOpen-headingFour">
                         <div class="accordion-body  bg-danger text-light">
-                            If you pass another function to a function as a parameter, it is called a callback function.
+                            If pass another function to a function as a parameter, it is called a callback function.
                             These
                             callback functions are often used in libraries and frameworks, such as the JavaScript
                             applications
