area calculation center and final submit commit

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <table class="table w-full">
                         <!-- head -->
                         <thead>
-                            <h2 class="underline text-3xl text-info">Area calculate</h2>
+                            <h2 class="underline text-center text-3xl text-info">Area calculate</h2>
                         </thead>
                         <tbody id="table-container">
                             <!-- row 1 -->
